--- a/stylev3.css
+++ b/stylev3.css
@@ -136,7 +136,7 @@ a:hover {
   nav .menu-icon {
     cursor: pointer;
     float: right;
-    padding: 28px 20px;
+    padding-left: 28px;
     position: relative;
     user-select: none;
   }
