--- a/stylev3.css
+++ b/stylev3.css
@@ -97,7 +97,7 @@ a:hover {
 
 @media (max-width:2500px) {
   .intro {
-    width: 100%;
+    width: 100vw;
   }
 
   .photo {
@@ -116,6 +116,7 @@ a:hover {
     justify-content: space-between;
     height: 65px;
     padding: 0px;
+    max-width: 100vw;
   }
 
   .menu {
@@ -194,10 +195,19 @@ a:hover {
 
   .intro {
     border: 0;
+    max-width: 100vw;
   }
 }
 
 @media (max-width:720px) {
+  nav {
+    width: 100vw;
+  }
+  
+  .intro {
+    width: 100vw;
+  }
+  
   .hero {
     display: none;
   }
@@ -222,7 +232,11 @@ a:hover {
 
 @media (max-width:530px) {
   .text {
-    width: 80%;
+    width: 80vw;
+  }
+  
+  .intro {
+    width: 100vw;
   }
 }
 
@@ -278,6 +292,7 @@ a:hover {
 
 .intro {
   width: 90%;
+  max-width: 100vw;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -290,15 +305,26 @@ a:hover {
 .hello {
   width: 500px;
   margin-top: -25px;
+  max-width: 100vw;
 }
 
 .hello h1 {
   color: black;
   line-height: 30px;
+  max-width: 100vw;
 }
 
 .hello p {
   color: black;
+  max-width: 100vw;
+}
+
+h3 {
+  max-width: 100vw;
+}
+
+p {
+  max-width: 100vw;
 }
 
 #main-content {
