--- a/stylev3.css
+++ b/stylev3.css
@@ -104,7 +104,6 @@ a:hover {
     width: 300px;
     height: 300px;
   }
-
 }
 
 @media(max-width:900px) {
@@ -260,8 +259,8 @@ a:hover {
     -webkit-filter: drop-shadow(10px 10px 10px gray);
 }
 
-.wft {
-  width: 80vw;
+.wfh {
+  width: 75%;
 }
 
 .fa-google {
@@ -340,7 +339,7 @@ p {
 }
 
 .text {
-  width: 80vw;
+  width: 70%;
 }
 
 p.indent {
